@@ -339,6 +339,16 @@
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
 		lv2:index 34 ;
+		lv2:symbol "LFO1_BPMSYNC" ;
+		lv2:name "LFO1 BPM (sync)" ;
+		lv2:portProperty lv2:toggled ;
+		lv2:default 0.0 ;
+		lv2:minimum 0.0 ;
+		lv2:maximum 1.0 ;
+		lv2pg:group synthv1_lv2:103_LFO1 ;
+	], [
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 35 ;
 		lv2:symbol "DCA1_VOLUME" ;
 		lv2:name "DCA1 Volume" ;
 		lv2:default 0.5 ;
@@ -347,7 +357,7 @@
 		lv2pg:group drumkv1_lv2:104_DCA1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 35 ;
+		lv2:index 36 ;
 		lv2:symbol "DCA1_ATTACK" ;
 		lv2:name "DCA1 Attack" ;
 		lv2:default 0.0 ;
@@ -356,7 +366,7 @@
 		lv2pg:group drumkv1_lv2:104_DCA1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 36 ;
+		lv2:index 37 ;
 		lv2:symbol "DCA1_DECAY1" ;
 		lv2:name "DCA1 Decay1" ;
 		lv2:default 0.5 ;
@@ -365,7 +375,7 @@
 		lv2pg:group drumkv1_lv2:104_DCA1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 37 ;
+		lv2:index 38 ;
 		lv2:symbol "DCA1_LEVEL2" ;
 		lv2:name "DCA1 Level 2" ;
 		lv2:default 0.2 ;
@@ -374,7 +384,7 @@
 		lv2pg:group drumkv1_lv2:104_DCA1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 38 ;
+		lv2:index 39 ;
 		lv2:symbol "DCA1_DECAY2" ;
 		lv2:name "DCA1 Decay 2" ;
 		lv2:default 0.5 ;
@@ -383,7 +393,7 @@
 		lv2pg:group drumkv1_lv2:104_DCA1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 39 ;
+		lv2:index 40 ;
 		lv2:symbol "OUT1_WIDTH" ;
 		lv2:name "OUT1 Stereo Width" ;
 		lv2:default 0.0 ;
@@ -392,7 +402,7 @@
 		lv2pg:group drumkv1_lv2:105_OUT1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 40 ;
+		lv2:index 41 ;
 		lv2:symbol "OUT1_PANNING" ;
 		lv2:name "OUT1 Panning" ;
 		lv2:default 0.0 ;
@@ -401,7 +411,7 @@
 		lv2pg:group drumkv1_lv2:105_OUT1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 41 ;
+		lv2:index 42 ;
 		lv2:symbol "OUT1_FXSEND" ;
 		lv2:name "OUT1 FX Send" ;
 		lv2:default 1.0 ;
@@ -410,7 +420,7 @@
 		lv2pg:group drumkv1_lv2:105_OUT1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 42 ;
+		lv2:index 43 ;
 		lv2:symbol "OUT1_VOLUME" ;
 		lv2:name "OUT1 Volume" ;
 		lv2:default 0.5 ;
@@ -420,7 +430,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 43 ;
+		lv2:index 44 ;
 		lv2:symbol "DEF1_PITCHBEND" ;
 		lv2:name "DEF1 Pitchbend" ;
 		lv2:default 0.2 ;
@@ -429,7 +439,7 @@
 		lv2pg:group drumkv1_lv2:106_DEF1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 44 ;
+		lv2:index 45 ;
 		lv2:symbol "DEF1_MODWHEEL" ;
 		lv2:name "DEF1 Modwheel" ;
 		lv2:default 0.2 ;
@@ -438,7 +448,7 @@
 		lv2pg:group drumkv1_lv2:106_DEF1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 45 ;
+		lv2:index 46 ;
 		lv2:symbol "DEF1_PRESSURE" ;
 		lv2:name "DEF1 Pressure" ;
 		lv2:default 0.2 ;
@@ -447,7 +457,7 @@
 		lv2pg:group drumkv1_lv2:106_DEF1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 46 ;
+		lv2:index 47 ;
 		lv2:symbol "DEF1_VELOCITY" ;
 		lv2:name "DEF1 Velocity" ;
 		lv2:default 0.2 ;
@@ -456,7 +466,7 @@
 		lv2pg:group drumkv1_lv2:106_DEF1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 47 ;
+		lv2:index 48 ;
 		lv2:symbol "DEF1_CHANNEL" ;
 		lv2:name "DEF1 Channel" ;
 		lv2:portProperty lv2:integer ;
@@ -466,7 +476,7 @@
 		lv2pg:group drumkv1_lv2:106_DEF1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 48 ;
+		lv2:index 49 ;
 		lv2:symbol "DEF1_NOTEOFF" ;
 		lv2:name "DEF1 Note Off" ;
 		lv2:portProperty lv2:integer, lv2:enumeration ;
@@ -479,7 +489,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 49 ;
+		lv2:index 50 ;
 		lv2:symbol "CHO1_WET" ;
 		lv2:name "Chorus Wet" ;
 		lv2:default 0.0 ;
@@ -488,7 +498,7 @@
 		lv2pg:group drumkv1_lv2:201_CHO1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 50 ;
+		lv2:index 51 ;
 		lv2:symbol "CHO1_DELAY" ;
 		lv2:name "Chorus Delay" ;
 		lv2:default 0.5 ;
@@ -497,7 +507,7 @@
 		lv2pg:group drumkv1_lv2:201_CHO1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 51 ;
+		lv2:index 52 ;
 		lv2:symbol "CHO1_FEEDB" ;
 		lv2:name "Chorus Feedback" ;
 		lv2:default 0.5 ;
@@ -506,7 +516,7 @@
 		lv2pg:group drumkv1_lv2:201_CHO1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 52 ;
+		lv2:index 53 ;
 		lv2:symbol "CHO1_RATE" ;
 		lv2:name "Chorus Rate" ;
 		lv2:default 0.5 ;
@@ -515,7 +525,7 @@
 		lv2pg:group drumkv1_lv2:201_CHO1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 53 ;
+		lv2:index 54 ;
 		lv2:symbol "CHO1_MOD" ;
 		lv2:name "Chorus Modulation" ;
 		lv2:default 0.5 ;
@@ -525,7 +535,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 54 ;
+		lv2:index 55 ;
 		lv2:symbol "FLA1_WET" ;
 		lv2:name "Flanger Wet" ;
 		lv2:default 0.0 ;
@@ -534,7 +544,7 @@
 		lv2pg:group drumkv1_lv2:202_FLA1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 55 ;
+		lv2:index 56 ;
 		lv2:symbol "FLA1_DELAY" ;
 		lv2:name "Flanger Delay" ;
 		lv2:default 0.5 ;
@@ -543,7 +553,7 @@
 		lv2pg:group drumkv1_lv2:202_FLA1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 56 ;
+		lv2:index 57 ;
 		lv2:symbol "FLA1_FEEDB" ;
 		lv2:name "Flanger Feedback" ;
 		lv2:default 0.5 ;
@@ -552,7 +562,7 @@
 		lv2pg:group drumkv1_lv2:202_FLA1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 57 ;
+		lv2:index 58 ;
 		lv2:symbol "FLA1_DAFT" ;
 		lv2:name "Flanger Daft" ;
 		lv2:default 0.0 ;
@@ -562,7 +572,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 58 ;
+		lv2:index 59 ;
 		lv2:symbol "PHA1_WET" ;
 		lv2:name "Phaser Wet" ;
 		lv2:default 0.0 ;
@@ -571,7 +581,7 @@
 		lv2pg:group drumkv1_lv2:203_PHA1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 59 ;
+		lv2:index 60 ;
 		lv2:symbol "PHA1_RATE" ;
 		lv2:name "Phaser Rate" ;
 		lv2:default 0.5 ;
@@ -580,7 +590,7 @@
 		lv2pg:group drumkv1_lv2:203_PHA1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 60 ;
+		lv2:index 61 ;
 		lv2:symbol "PHA1_FEEDB" ;
 		lv2:name "Phaser Feedback" ;
 		lv2:default 0.5 ;
@@ -589,7 +599,7 @@
 		lv2pg:group drumkv1_lv2:203_PHA1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 61 ;
+		lv2:index 62 ;
 		lv2:symbol "PHA1_DEPTH" ;
 		lv2:name "Phaser Depth" ;
 		lv2:default 0.5 ;
@@ -598,7 +608,7 @@
 		lv2pg:group drumkv1_lv2:203_PHA1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 62 ;
+		lv2:index 63 ;
 		lv2:symbol "PHA1_DAFT" ;
 		lv2:name "Phaser Daft" ;
 		lv2:default 0.0 ;
@@ -608,7 +618,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 63 ;
+		lv2:index 64 ;
 		lv2:symbol "DEL1_WET" ;
 		lv2:name "Delay Wet" ;
 		lv2:default 0.0 ;
@@ -617,7 +627,7 @@
 		lv2pg:group drumkv1_lv2:204_DEL1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 64 ;
+		lv2:index 65 ;
 		lv2:symbol "DEL1_DELAY" ;
 		lv2:name "Delay Delay" ;
 		lv2:default 0.5 ;
@@ -626,7 +636,7 @@
 		lv2pg:group drumkv1_lv2:204_DEL1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 65 ;
+		lv2:index 66 ;
 		lv2:symbol "DEL1_FEEDB" ;
 		lv2:name "Delay Feedback" ;
 		lv2:default 0.5 ;
@@ -635,7 +645,7 @@
 		lv2pg:group drumkv1_lv2:204_DEL1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 66 ;
+		lv2:index 67 ;
 		lv2:symbol "DEL1_BPM" ;
 		lv2:name "Delay BPM" ;
 		lv2:default 180.0 ;
@@ -644,7 +654,7 @@
 		lv2pg:group drumkv1_lv2:204_DEL1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 67 ;
+		lv2:index 68 ;
 		lv2:symbol "DEL1_BPMSYNC" ;
 		lv2:name "Delay BPM (sync)" ;
 		lv2:portProperty lv2:toggled ;
@@ -655,7 +665,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 68 ;
+		lv2:index 69 ;
 		lv2:symbol "REV1_WET" ;
 		lv2:name "Reverb Wet" ;
 		lv2:default 0.0 ;
@@ -664,7 +674,7 @@
 		lv2pg:group drumkv1_lv2:205_REV1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 69 ;
+		lv2:index 70 ;
 		lv2:symbol "REV1_ROOM" ;
 		lv2:name "Reverb Room" ;
 		lv2:default 0.5 ;
@@ -673,7 +683,7 @@
 		lv2pg:group drumkv1_lv2:205_REV1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 70 ;
+		lv2:index 71 ;
 		lv2:symbol "REV1_DAMP" ;
 		lv2:name "Reverb Damp" ;
 		lv2:default 0.5 ;
@@ -682,7 +692,7 @@
 		lv2pg:group drumkv1_lv2:205_REV1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 71 ;
+		lv2:index 72 ;
 		lv2:symbol "REV1_FEEDB" ;
 		lv2:name "Reverb Feedback" ;
 		lv2:default 0.5 ;
@@ -691,7 +701,7 @@
 		lv2pg:group drumkv1_lv2:205_REV1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 72 ;
+		lv2:index 73 ;
 		lv2:symbol "REV1_WIDTH" ;
 		lv2:name "Reverb Width" ;
 		lv2:default 0.0 ;
@@ -701,7 +711,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 73 ;
+		lv2:index 74 ;
 		lv2:symbol "DYN1_COMPRESS" ;
 		lv2:name "Dynamic Compressor" ;
 		lv2:portProperty lv2:toggled ;
@@ -711,7 +721,7 @@
 		lv2pg:group drumkv1_lv2:206_DYN1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 74 ;
+		lv2:index 75 ;
 		lv2:symbol "DYN1_LIMITER" ;
 		lv2:name "Dynamic Limiter" ;
 		lv2:portProperty lv2:toggled ;
