@@ -125,8 +125,11 @@ protected slots:
 	// Swap params A/B.
 	void swapParams(bool bOn);
 
-	// Delay BPM change.
-	void bpmSyncChanged();
+	// LFO1 BPM sync change.
+	void lfo1BpmSyncChanged();
+
+	// Delay BPM sync change.
+	void del1BpmSyncChanged();
 
 	// Notification updater.
 	void updateSchedNotify(int stype, int sid);
@@ -185,6 +188,9 @@ protected:
 
 	// Dirty flag (overridable virtual) methods.
 	virtual void updateDirtyPreset(bool bDirtyPreset);
+
+	// Common BPM sync change.
+	void bpmSyncChanged(drumkv1widget_spin *pKnob, drumkv1::ParamIndex index);
 
 private:
 
